# terashite

./: Cargo.toml  LICENSE  README.md
src/: cache.rs  disk.rs  html.rs  lib.rs  main.rs  model.rs
src/scraper/: bachelor_seal.rs  mod.rs  tibisukemaru.rs
