[package]
name = "terashite"
authors = ["dbarenholz"]
description = "A scraper for some akari puzzle domains."
version = "0.1.0"
edition = "2024"
license = "mit"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
minify-html = "0.18.1"
reqwest = "0.13.2"
scraper = "0.26.0"
tokio = { version = "1.50.0", features = ["time", "macros", "rt-multi-thread"] }
